@@ -317,6 +317,10 @@ CAMERA_FORBID_FOLLOW 0          # forbid fixed external camera
 CAMERA_FORBID_CUSTOM 0          # forbid custom external camera
 CAMERA_FORBID_SERVER_CUSTOM 1   # forbid server defined custom external camera
 
+CAMERA_FORBID_CUSTOM_GLANCE 0   # forbid use of special glance camera settings
+CAMERA_OVERRIDE_CUSTOM_GLANCE 0 # override custom glance settings with vanues from the server
+CAMERA_OVERRIDE_CUSTOM_GLANCE_SERVER_CUSTOM 0 # the same, but only affects the server custom camera
+
 CAMERA_FOLLOW_START_X -30 # fixed external camera start position
 CAMERA_FOLLOW_START_Y -30 # ( relative to cycle )
 CAMERA_FOLLOW_START_Z  80
@@ -331,14 +335,21 @@ CAMERA_FREE_START_Z    100
 
 
                                 # custom camera position
-CAMERA_CUSTOM_BACK    6         # how much the camera is moved back
-CAMERA_CUSTOM_RISE    4         # the height of the camera above the cycle
+CAMERA_CUSTOM_BACK    6         # how much the custom camera is moved back
+CAMERA_CUSTOM_RISE    4         # the height of the custom camera above the cycle
 CAMERA_CUSTOM_BACK_FROMSPEED .5 # how much the camera is moved back for every m/s speed
 CAMERA_CUSTOM_RISE_FROMSPEED .4 # the height of the camera above the cycle for every m/s speed
 CAMERA_CUSTOM_PITCH   -.58      # inclination of the camera
 CAMERA_CUSTOM_ZOOM    0         # how much the camera zooms in your cycle at the beginning of the round (to show the team's formation)
 CAMERA_CUSTOM_TURN_SPEED     4  # speed the custom camera turns with
 CAMERA_CUSTOM_TURN_SPEED_180 4  # factor to the turn speed after a quick reversal
+
+                                # glance camera position
+CAMERA_GLANCE_BACK    6         # how much the glance camera is moved back
+CAMERA_GLANCE_RISE    4         # the height of the glance camera above the cycle
+CAMERA_GLANCE_BACK_FROMSPEED .5 # how much the camera is moved back for every m/s speed
+CAMERA_GLANCE_RISE_FROMSPEED .4 # the height of the camera above the cycle for every m/s speed
+CAMERA_GLANCE_PITCH   -.58      # inclination of the camera
 
 # the old custom camera settings for those who miss them
 
@@ -357,6 +368,13 @@ CAMERA_SERVER_CUSTOM_RISE    20           # the height of the camera above the c
 CAMERA_SERVER_CUSTOM_BACK_FROMSPEED    0  # how much the camera is moved back for every m/s speed
 CAMERA_SERVER_CUSTOM_RISE_FROMSPEED    0  # the height of the camera above the cycle for every m/s speed
 CAMERA_SERVER_CUSTOM_PITCH   -.7          # inclination of the camera
+
+                                          # server defined glance camera position
+CAMERA_SERVER_GLANCE_BACK    30           # how much the camera is moved back
+CAMERA_SERVER_GLANCE_RISE    20           # the height of the camera above the cycle
+CAMERA_SERVER_GLANCE_BACK_FROMSPEED    0  # how much the camera is moved back for every m/s speed
+CAMERA_SERVER_GLANCE_RISE_FROMSPEED    0  # the height of the camera above the cycle for every m/s speed
+CAMERA_SERVER_GLANCE_PITCH   -.7          # inclination of the camera
 
 # the following two settings are only in effect if the first is positive, otherwise, the values
 # are taken from the clientside custom camera. Usually, you should leave them alone even if
